add get_director function

--- a/movie-recommendations.ipynb
+++ b/movie-recommendations.ipynb
@@ -439,6 +439,19 @@
     "for feature in features:\n",
     "    df2[feature] = df2[feature].apply(safe_literal_eval)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_director(x):\n",
+    "    for crew_member in x:\n",
+    "        if crew_member['job'] == 'Director':\n",
+    "            return crew_member['name']\n",
+    "    return np.nan"
+   ]
   }
  ],
  "metadata": {
