--- a/movie-recommendations.ipynb
+++ b/movie-recommendations.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
     "    idx = indices[title]\n",
     "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
     "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
-    "    sim_scores = sim_scores[1:11]\n",
+    "    sim_scores = sim_scores[1:6]\n",
     "    movie_indices = [i[0] for i in sim_scores]\n",
     "    \n",
     "    recommended_movies = df2['title'].iloc[movie_indices]\n",
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "4      [based on novel, mars, medallion]  [Action, Adventure, Science Fiction]  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,31 +651,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cast</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>director</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[samworthington, zoesaldana, sigourneyweaver]</td>\n",
+       "      <td>[cultureclash, future, spacewar]</td>\n",
+       "      <td>jamescameron</td>\n",
+       "      <td>[action, adventure, fantasy]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[johnnydepp, orlandobloom, keiraknightley]</td>\n",
+       "      <td>[ocean, drugabuse, exoticisland]</td>\n",
+       "      <td>goreverbinski</td>\n",
+       "      <td>[adventure, fantasy, action]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[danielcraig, christophwaltz, léaseydoux]</td>\n",
+       "      <td>[spy, basedonnovel, secretagent]</td>\n",
+       "      <td>sammendes</td>\n",
+       "      <td>[action, adventure, crime]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[christianbale, michaelcaine, garyoldman]</td>\n",
+       "      <td>[dccomics, crimefighter, terrorist]</td>\n",
+       "      <td>christophernolan</td>\n",
+       "      <td>[action, crime, drama]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[taylorkitsch, lynncollins, samanthamorton]</td>\n",
+       "      <td>[basedonnovel, mars, medallion]</td>\n",
+       "      <td>andrewstanton</td>\n",
+       "      <td>[action, adventure, sciencefiction]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            cast  \\\n",
+       "0  [samworthington, zoesaldana, sigourneyweaver]   \n",
+       "1     [johnnydepp, orlandobloom, keiraknightley]   \n",
+       "2      [danielcraig, christophwaltz, léaseydoux]   \n",
+       "3      [christianbale, michaelcaine, garyoldman]   \n",
+       "4    [taylorkitsch, lynncollins, samanthamorton]   \n",
+       "\n",
+       "                              keywords          director  \\\n",
+       "0     [cultureclash, future, spacewar]      jamescameron   \n",
+       "1     [ocean, drugabuse, exoticisland]     goreverbinski   \n",
+       "2     [spy, basedonnovel, secretagent]         sammendes   \n",
+       "3  [dccomics, crimefighter, terrorist]  christophernolan   \n",
+       "4      [basedonnovel, mars, medallion]     andrewstanton   \n",
+       "\n",
+       "                                genres  \n",
+       "0         [action, adventure, fantasy]  \n",
+       "1         [adventure, fantasy, action]  \n",
+       "2           [action, adventure, crime]  \n",
+       "3               [action, crime, drama]  \n",
+       "4  [action, adventure, sciencefiction]  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "features = ['cast', 'keywords', 'director', 'genres']\n",
     "\n",
     "for feature in features:\n",
-    "    df2[feature] = df2[feature].apply(clean_data)"
+    "    df2[feature] = df2[feature].apply(clean_data)\n",
+    "\n",
+    "df2[features].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    cultureclash future spacewar samworthington zo...\n",
+       "1    ocean drugabuse exoticisland johnnydepp orland...\n",
+       "2    spy basedonnovel secretagent danielcraig chris...\n",
+       "3    dccomics crimefighter terrorist christianbale ...\n",
+       "4    basedonnovel mars medallion taylorkitsch lynnc...\n",
+       "Name: soup, dtype: object"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def create_soup(x):\n",
     "    return ' '.join(x['keywords']) + ' ' + ' '.join(x['cast']) + ' ' + x['director'] + ' ' + ' '.join(x['genres'])\n",
     "\n",
-    "df2['soup'] = df2.apply(create_soup, axis=1)"
+    "df2['soup'] = df2.apply(create_soup, axis=1)\n",
+    "\n",
+    "df2['soup'].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -738,74 +853,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1990</th>\n",
-       "      <td>The Empire Strikes Back</td>\n",
-       "      <td>0.700000</td>\n",
+       "      <th>867</th>\n",
+       "      <td>The Godfather: Part III</td>\n",
+       "      <td>0.527046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1490</th>\n",
-       "      <td>Return of the Jedi</td>\n",
-       "      <td>0.600000</td>\n",
+       "      <th>2731</th>\n",
+       "      <td>The Godfather: Part II</td>\n",
+       "      <td>0.421637</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>229</th>\n",
-       "      <td>Star Wars: Episode III - Revenge of the Sith</td>\n",
-       "      <td>0.400000</td>\n",
+       "      <th>4638</th>\n",
+       "      <td>Amidst the Devil's Wings</td>\n",
+       "      <td>0.384900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>230</th>\n",
-       "      <td>Star Wars: Episode II - Attack of the Clones</td>\n",
-       "      <td>0.400000</td>\n",
+       "      <th>2649</th>\n",
+       "      <td>The Son of No One</td>\n",
+       "      <td>0.377964</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>233</th>\n",
-       "      <td>Star Wars: Episode I - The Phantom Menace</td>\n",
-       "      <td>0.400000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>260</th>\n",
-       "      <td>Ender's Game</td>\n",
-       "      <td>0.400000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4401</th>\n",
-       "      <td>The Helix... Loaded</td>\n",
-       "      <td>0.365148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>The Lovers</td>\n",
-       "      <td>0.358569</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>After Earth</td>\n",
-       "      <td>0.335410</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4117</th>\n",
-       "      <td>Six-String Samurai</td>\n",
-       "      <td>0.335410</td>\n",
+       "      <th>1525</th>\n",
+       "      <td>Apocalypse Now</td>\n",
+       "      <td>0.333333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             Movie  Similarity Score\n",
-       "1990                       The Empire Strikes Back          0.700000\n",
-       "1490                            Return of the Jedi          0.600000\n",
-       "229   Star Wars: Episode III - Revenge of the Sith          0.400000\n",
-       "230   Star Wars: Episode II - Attack of the Clones          0.400000\n",
-       "233      Star Wars: Episode I - The Phantom Menace          0.400000\n",
-       "260                                   Ender's Game          0.400000\n",
-       "4401                           The Helix... Loaded          0.365148\n",
-       "83                                      The Lovers          0.358569\n",
-       "193                                    After Earth          0.335410\n",
-       "4117                            Six-String Samurai          0.335410"
+       "                         Movie  Similarity Score\n",
+       "867    The Godfather: Part III          0.527046\n",
+       "2731    The Godfather: Part II          0.421637\n",
+       "4638  Amidst the Devil's Wings          0.384900\n",
+       "2649         The Son of No One          0.377964\n",
+       "1525            Apocalypse Now          0.333333"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
